--- a/packages/form-app/form-app/src/index.html
+++ b/packages/form-app/form-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FormApp</title>
+  <title>FormQL Editor</title>
   <base href="/">
   <meta http-equiv="X-UA-Compatible" content="IE=11">
   <meta name="viewport" content="width=device-width, initial-scale=1">
